--- a/views/scss/css-sdk.scss
+++ b/views/scss/css-sdk.scss
@@ -13,3 +13,11 @@
         font: 12px $monospaceFont;
     }
 }
+
+.css-report .report {
+    display:table;
+    padding: 20px;
+    h2 {
+        @include font-size(15);
+    }
+}
