compile scss and javascript

--- a/views/css/css-sdk.css
+++ b/views/css/css-sdk.css
@@ -1,23 +1,2 @@
-                                  /*
-                                 /  \
-                                |    |
-                              --:'''':--
-THIS CODE IS GENERATED          :*_* :
-                                _:"":\___
-AUTOMAGICALLY    * *      ____.' :::     '._
-                * *=====<<=)           \    :
-DO NOT EDIT!     * *      '-'-'\_      /'._.'
-                                  \====:_ ""
-                                 .'     \
-                                :       :
-                               /   :    \
-                              :   .      '.
-                              :  : :      :
-                              :__:-:__.;--'
-                             <*_/   <*/
-.css-sdk h2 {
-  font-size: 14px;
-  font-size: 1.4rem;
-  margin: 20px 0 5px 0; }
-
+.css-sdk h2{font-size:14px;font-size:1.4rem;margin:20px 0 5px 0}
 /*# sourceMappingURL=css-sdk.css.map */
